--- a/src/component/home/Home.css
+++ b/src/component/home/Home.css
@@ -24,7 +24,7 @@
           background: rgba(255,255,255,0.08);
           border: 1px solid rgba(255,255,255,0.15);
           backdrop-filter: blur(8px);
-          Webkit-backdrop-filter: blur(8px);
+          /* Webkit-backdrop-filter: blur(8px); */
           transition: all 0.3s ease;
           margin: 8px;
         }
