--- a/src/component/batch-management/BatchManage.css
+++ b/src/component/batch-management/BatchManage.css
@@ -151,3 +151,11 @@ body {
   display: flex;
   gap: 10px;
 }
+.admin-sidebar {
+  /* width: 250px; */
+  background-color: #f8f9fa;
+  box-shadow: 0px 0px 3px grey;
+  /* min-height: 100vh; */
+  text-align: center;
+  /* padding-top: 40px; */
+}
