--- a/src/component/studnets/SubmitAssignment.css
+++ b/src/component/studnets/SubmitAssignment.css
@@ -15,7 +15,7 @@
   flex-wrap: wrap;
   background-color: #007bff;
   color: white;
-  padding: 15px 20px;
+  /* padding: 15px 20px; */
 }
 
 .header-links {
