--- a/src/component/teacher-portal/SubmittedAssignment.css
+++ b/src/component/teacher-portal/SubmittedAssignment.css
@@ -4,7 +4,7 @@
   background-color: #fff;
   box-shadow: 0px 0px 3px grey;
   min-height: 100vh;
-  padding-top: 50px;
+  /* padding-top: 50px; */
 }
 
 /* Header */
